chnges to home page

--- a/frontend/src/components/Value/Value.css
+++ b/frontend/src/components/Value/Value.css
@@ -52,3 +52,16 @@
 .accordtionButton .primaryText {
     font-size: 1.1rem;
 }
+@media(max-width:1024px) {
+    .v-container{
+        flex-direction: column;
+    }
+    @media (max-width: 768px) {
+        .accordtionButton .primaryText {
+            font-size: 0.8rem;
+        }
+        
+    }
+  
+
+}
