--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,6 +1,8 @@
 .h-wrapper {
     background: var(--black);
     color: white;
+    z-index: 99;
+
 }
 
 .h-container {
@@ -10,10 +12,41 @@
     padding-bottom: 1rem;
     color: var(--secondary);
 }
-.h-menu{
+
+.h-menu {
     gap: 2rem;
 
 }
-.h-menu>*:hover{
+
+.h-menu>*:hover {
     cursor: pointer;
+}
+
+.menu-icon {
+    display: none;
+}
+
+@media(max-width:768px) {
+    .menu-icon {
+        display: block;
+    }
+
+    .h-menu {
+        z-index: 99;
+        color: var(--black);
+        top: -15rem;
+        right: 4rem;
+        position: absolute;
+        background-color: white;
+        flex-direction: column;
+        font-weight: 500;
+        gap: 2rem;
+        padding: 3rem;
+        border-radius: 10px;
+        align-items: flex-start;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+        transition: all 300ms ease-in;
+
+
+    }
 }
