--- a/frontend/src/components/Residencies/Residencies.css
+++ b/frontend/src/components/Residencies/Residencies.css
@@ -78,3 +78,14 @@
     background-color: #d2d2d8;
 
 }
+
+@media(max-width:640px) {
+    .r-head {
+        align-items: center;
+
+    }
+
+    .r-buttons {
+        position: initial;
+    }
+}
